k8s_manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appsinno-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - appsinnodnslabel.koreacentral.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: appsinnodnslabel.koreacentral.cloudapp.azure.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: appsinno-svc
            port:
              number: 80

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: appsinno-ingress
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     cert-manager.io/cluster-issuer: letsencrypt-staging
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
#     nginx.ingress.kubernetes.io/use-regex: "true"
# spec:
#   tls:
#   - hosts:
#     - appsinnodnslabel.koreacentral.cloudapp.azure.com
#     secretName: tls-secret
#   rules:
#   - host: appsinnodnslabel.koreacentral.cloudapp.azure.com
#     http:
#       paths:
#       - path: /(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: appsinno-svc
#             port:
#               number: 80
